# hexlet-flask-example

./: .gitignore  Makefile  README.md  app.py  data.py  example.py  pyproject.toml  solution.py  solution_09.py  solution_11.py
course_tests/: lesson_02.py
data/: courses.json  data_posts.py  posts.json  repository.py  users.json
lesson/: Makefile  app.py  pyproject.toml  users.json
lesson/templates/users/: index.html  new.html
static/css/: calculator.css
templates/: calculator.html  index.html  temp.html
templates/courses/: index.html  new.html
templates/posts/: index.html  new.html  show.html
templates/users/: index.html  new.html  show.html
tests/: lesson_02.py
tools/: temp.py  tools.py  validate.py
